cicd/k8s/sample/example-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-edge-pod
  namespace: iot-edge
spec:
  tolerations:
    # taint toleration required
    - key: aranya.arhat.dev/dedicated
      value: edge-device
  nodeSelector:
    aranya.arhat.dev/type: virtual-node
    kubernetes.io/hostname: aranya-node-for-example-edge-device-mqtt
  containers:
  - name: test
    image: alpine:latest
    command:
    - /bin/sleep
    - "3600"
  restartPolicy: Never
