cicd/k8s/sample/example-workload.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-edge-pod
  namespace: edge
spec:
  tolerations:
    # set deploy to which virtual cluster (kubernetes namespace)
    # this toleration is requeired, because it's the taint set on every node in that virtual cluster
    - key: arhat.dev/namespace
      value: edge
  nodeSelector:
    # select specific edge device(s) with labels
    arhat.dev/type: virtual-node
    kubernetes.io/hostname: aranya-node-for-example-edge-device-mqtt
  containers:
  - name: sleep
    image: alpine:latest
    command:
    - /bin/sleep
    - "3600"
  restartPolicy: Never
