cicd/k8s/sample/sample-workload.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-edge-pod
spec:
  tolerations:
    # set deploy to which virtual cluster (kubernetes namespace)
    # this toleration is requeired, because it's the taint set on 
    # every node in the virtual cluster (namespace)
    - key: arhat.dev/namespace
      operator: Equal
      value: edge
  nodeSelector:
    # select specific remote node(s) with labels
    # to ensure this pod will be scheduled to edge devices, add role label
    arhat.dev/role: EdgeDevice
    # use edge device name label selector
    arhat.dev/name: example-edge-device-grpc
  containers:
  - name: sleep
    image: alpine:latest
    command:
    - /bin/sleep
    - "3600"
  restartPolicy: Never
